--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,30 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+  "manifest_version": 2,
+  "name": "uufirst",
+  "description": "My first chrome extension.",
+  "version": "1.0.0",
+  "icons": {
+    "16": "logo192.png",
+    "128": "logo192.png"
+  },
+  "browser_action": {
+    "default_icon": {
+      "19": "logo192.png",
+      "38": "logo192.png"
     },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+    "default_title": "uufirst",
+    "default_popup": "./index.html"
+  },
+  "permissions": [
+    "tabs"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background": {
+    "scripts": [
+      "./chrome/background.js"
+    ]
+  },
+  "chrome_url_overrides": {
+    "newtab": "./index.html"
+  },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
